--- a/index.html
+++ b/index.html
@@ -156,11 +156,20 @@
           <div class=" relative">
             <img
               src="https://images.puma.com/image/upload/c_scale,f_auto,q_auto:good,w_3200/cms/images/45adb00438bd290f62f1146b0792436e60087fe4?_a=BAMCkGfi0"
-              class="w-[800px] h-[700px] mt-[-40px]"
+              class="w-[800px] h-[780px] mt-[-40px]"
               alt=""
             />
           </div>
+          
       </div>
+      <div class=" ">
+        <video class=" w-[800px] mt-60 ml-48 absolute inset-0  object-cover object-center " autoplay loop playsinline controlslist="nodownload" muted>
+            <source src="https://cdn.sanity.io/files/qa41whrn/prod/2269b9809fbb0cc903469eabd884b3de0ac70c80.mp4" type="video/mp4">
+        </video>
+      </div>
+    </section>
+    <section class=" ">
+
     </section>
   </body>
 </html>
